# Drone_L_RL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  hardware-test.yml  release.yml
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
TDoA_Engine/: DEV_NOTES.md  IMPLEMENTATION_PLAN.md  README.md  requirements.txt
TDoA_Engine/engine/: README.md  autocal.py  config.py  io_parser.py
TDoA_Engine/engine/service/: http_api.py  log_manager.py  ws_stream.py
TDoA_Engine/engine/solver/: ekf.py  tdoa.py
TDoA_Engine/engine/tests/: test_engine.py
TDoA_Engine/tools/sim/: example_circle.yaml  example_circle_perfect.yaml  sim_uwb.py
TDoA_Engine/ui/: index.html  package-lock.json  package.json
TDoA_Engine/ui/src/: App.css  App.tsx  api.ts  config.ts  index.css  types.ts
TDoA_Engine/ui/src/components/: AnchorEditor.tsx  BottomPanel.tsx  ClockEditor.tsx  Controls.tsx  Hud.tsx  MapView.tsx  Sidebar.tsx  TopBar.tsx
TDoA_Engine/ui/src/hooks/: usePoseStream.ts
config/: README.md  uwb_verify_ports.example.yaml  uwb_verify_ports.live.yaml  uwb_verify_thresholds.example.yaml
docs/: BRANCHING_STRATEGY.md  CI_CD_PIPELINE.md  DOCKER_GUIDE.md  README.md  indoor_drone_final_project_plan.md  tdoa_engine_report.md  uwb_verification_workflow.md
docs/safety/: EMERGENCY_PROCEDURES.md  FLIGHT_PROTOCOLS.md  RF_COMPLIANCE.md  SAFETY_CHECKLIST.md  SAFETY_PLAN.md
firmware/: README.md
firmware/boards/dwm3001cdk/dev_firmware/: README.md
firmware/boards/dwm3001cdk/dev_firmware/drone_rx/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/drone_rx/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_master/: prj.conf
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_master_verify/: CMakeLists.txt  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_master_verify/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_slave/: Kconfig  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_slave/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/gps_beacon_slave_verify/: CMakeLists.txt  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/led_bringup/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/led_bringup/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/tof_initiator/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/tof_initiator/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/tof_responder/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/tof_responder/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/twr_initiator/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/twr_initiator/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/twr_responder/: CMakeLists.txt  README.md  app.overlay
firmware/boards/dwm3001cdk/dev_firmware/twr_responder/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/usb_hello/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/usb_hello/src/: main.c
firmware/boards/dwm3001cdk/dev_firmware/uwb_chipid/: CMakeLists.txt  README.md  app.overlay  prj.conf
firmware/boards/dwm3001cdk/dev_firmware/uwb_chipid/dts/bindings/: qorvo,dw3000.yaml
firmware/boards/dwm3001cdk/dev_firmware/uwb_chipid/src/: deca_probe_interface.h  deca_probe_interface_zephyr.c  deca_rsl_stub.c  dw3000_port.c  main.c
firmware/include/: uwb_blink.h
hardware/: README.md
ros2_ws/: README.md
scripts/: README.md  activate_zephyr_env.sh  clean_project.sh  flash_tof_initiator.sh  flash_tof_responder.sh  setup_zephyr_macos.sh  uwb_verify_analyze.py  uwb_verify_capture.py
scripts/docker/: setup_dev_env.sh
simulation/: README.md
tests/: README.md
